# libs

./: .gitignore  CMakeLists.txt  Kconfig  README.md  prj.conf
cmlib/: Kconfig  Kconfig.compiler  Kconfig.cpu  Kconfig.os  Kconfig.testing  README.md
cmlib/cmake/: boilerplate.cmake  cmlib-config.cmake  kconfig.cmake  testing.cmake
cmlib/cmake/compiler/: compiler.cmake  host.cmake  iar.cmake
cmlib/cmake/cpu/: cpu.cmake  stm32.cmake
example_app/: CMakeLists.txt  Kconfig  main.cpp
src/: CMakeLists.txt  main.cpp
src/util/: callback.h  iterable.h  singleton.h
testing/: CMakeLists.txt
testing/example1/: CMakeLists.txt  Kconfig
testing/example2/: CMakeLists.txt  Kconfig  prj.conf  test.cpp
testing/test1/: CMakeLists.txt  Kconfig  prj.conf
util/: callback.h  singleton.h
